name:                holebrush

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.0.0
synopsis:            Textile-like markup language
homepage:            http://bitcheese.net/code/holebrush
license:             GPL-3
license-file:        LICENSE
author:              Voker57
maintainer:          voker57@gmail.com
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules: Text.Holebrush, Text.Holebrush.PairedTag
  hs-source-dirs: src
  default-language:    Haskell2010
  build-depends:       base >=4.8 && <4.9, parsec >= 3.1.9 && < 3.2, text >= 1.2.1 && < 1.3, containers >= 0.5.6 && <= 0.6, uri >= 0.1.6.4 && < 0.2
  ghc-options: -fno-warn-tabs


executable holebrush
  main-is: Main.hs 
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9, parsec >= 3.1.9 && < 3.2, text >= 1.2.1 && < 1.3, containers >= 0.5.6 && <= 0.6, uri >= 0.1.6.4 && < 0.2
  hs-source-dirs: src
  ghc-options: -fno-warn-tabs
  default-language:    Haskell2010